# concordium-playground

./: .gitignore  Cargo.toml
backend/: Cargo.toml
backend/src/: main.rs
cis2/: Cargo.toml
cis2/src/: lib.rs
cis2/tests/: tests.rs
frontend/: .env  package-lock.json  package.json
frontend/src/app/: Wallet.tsx  WalletCcd.tsx  page.tsx
frontend/src/app/components/: CcdClient.ts  Wallet.tsx
nft/: Cargo.toml  README.md  ciphers_nft.wasm.v1  nft_test.wasm.v1
nft/example/: tests_copy.rs
nft/src/: cis2.rs  contract_view.rs  error.rs  events.rs  getters.rs  init.rs  lib.rs  mint.rs  setters.rs  state.rs
nft/tests/: tests.rs  tests_cis.rs  tests_nft.rs
nft/tests/helpers/: functions.rs  init.rs  mod.rs
src/: lib.rs
tests/: tests.rs
voting/: Cargo.toml
voting/src/: lib.rs
voting/tests/: tests.rs
