[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27", features = ["net", "rt-multi-thread"] }
futures = "0.3"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_bytes = "0.11"
anyhow = "1.0"
tokio-postgres = { version = "^0.7.8", features = ["with-serde_json-1"], optional = true }
concordium-rust-sdk = "3.2.0"
http = "1.0.0"
hex = "0.4.3"
bincode = "1.3.3"


[dev-dependencies]
structopt = "0.3"
clap = "4.4"
csv = "1.1"
tokio = { version = "1.27", features = ["full"] }
tokio-test = { version = "0.4" }
tonic = {version = "0.10", features = ["tls", "tls-roots"]} # Use system trust roots.
